--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Noman</h1>
-    <p>Noman vai valo lok joyer mala tari hok</p>
-    <p> amder desh tare koto valo bashi</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde omnis amet officiis ullam excepturi voluptas, inventore veritatis quisquam in nulla itaque, deserunt nihil. Quod iusto reprehenderit explicabo perferendis nihil!</p>
 </body>
 </html>
