index: h1 tag added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde omnis amet officiis ullam excepturi voluptas, inventore veritatis quisquam in nulla itaque, deserunt nihil. Quod iusto reprehenderit explicabo perferendis nihil!</p>
+    <h1>hello guyes</h1>
 </body>
 </html>
